--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   background-color: #fbd4cb;
   border-radius: 250px 250px 50px 350px;
   top: 35px;
-  right: 735px;
+  left: 735px;
   box-shadow: 10px 0 8px rgba(0, 0, 0, 0.4);
 }
 .ojo {
