--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@
 
 .Cabeza {
   position: relative;
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: #fbd4cb;
-  border-radius: 250px 250px 50px 350px;
-  top: 35px;
-  left: 735px;
-  box-shadow: 10px 0 8px rgba(0, 0, 0, 0.4);
+  border-radius: 250% 250% 50% 350%;
+  top: 35%;
+  left: 735%;
+  box-shadow: 10% 0 8% rgba(0, 0, 0, 0.4);
 }
 .ojo {
   position: relative;
