--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
         margin: 50px auto 0;
         top: 150px;
         box-shadow: inset -10px 0 8px rgba(0, 0, 0, 0.4);
+        padding-top: 16px;
 }
 
 .Cabeza {
